--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,8 @@ stages:
         steps:
           - task: Maven@3
             inputs:
+              mavenVersionOption: 'SpecificVersion'
+              mavenVersion: '3.9.9'
               mavenPomFile: 'pom.xml'
               mavenOptions: '-Xmx3072m'
               javaHomeOption: 'JDKVersion'
@@ -38,6 +40,8 @@ stages:
         steps:
           - task: Maven@3
             inputs:
+              mavenVersionOption: 'SpecificVersion'
+              mavenVersion: '3.9.9'
               mavenPomFile: 'pom.xml'
               mavenOptions: '-Xmx3072m'
               javaHomeOption: 'JDKVersion'
