--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,21 @@ stages:
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
               goals: 'test'
 
+          # Generate Allure report after tests
+          - script: |
+              # Install Allure CLI
+              curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.20.0/allure-2.20.0.zip
+              unzip allure.zip -d $(Build.SourcesDirectory)/allure
+              # Generate Allure report
+              $(Build.SourcesDirectory)/allure/bin/allure generate $(Build.SourcesDirectory)/target/allure-results -o $(Build.SourcesDirectory)/allure-report
+            displayName: 'Generate Allure Report'
+
+          # Publish Allure report as a build artifact
+          - task: PublishBuildArtifacts@1
+            inputs:
+              pathToPublish: '$(Build.SourcesDirectory)/allure-report'
+              artifactName: 'allure-report'
+
   - stage: NotifySuccess
     condition: succeeded()
     jobs:
